; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_main.c_qed_periodic_db_rec_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_main.c_qed_periodic_db_rec_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_hwfn = type { i32, i32 }

@QED_PERIODIC_DB_REC_COUNT = common dso_local global i32 0, align 4
@QED_SLOWPATH_PERIODIC_DB_REC = common dso_local global i32 0, align 4
@QED_PERIODIC_DB_REC_INTERVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qed_periodic_db_rec_start(%struct.qed_hwfn* %0) #0 {
  %2 = alloca %struct.qed_hwfn*, align 8
  store %struct.qed_hwfn* %0, %struct.qed_hwfn** %2, align 8
  %3 = load i32, i32* @QED_PERIODIC_DB_REC_COUNT, align 4
  %4 = load %struct.qed_hwfn*, %struct.qed_hwfn** %2, align 8
  %5 = getelementptr inbounds %struct.qed_hwfn, %struct.qed_hwfn* %4, i32 0, i32 1
  store i32 %3, i32* %5, align 4
  %6 = load i32, i32* @QED_SLOWPATH_PERIODIC_DB_REC, align 4
  %7 = load %struct.qed_hwfn*, %struct.qed_hwfn** %2, align 8
  %8 = getelementptr inbounds %struct.qed_hwfn, %struct.qed_hwfn* %7, i32 0, i32 0
  %9 = call i64 @test_bit(i32 %6, i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %17

12:                                               ; preds = %1
  %13 = load %struct.qed_hwfn*, %struct.qed_hwfn** %2, align 8
  %14 = load i32, i32* @QED_SLOWPATH_PERIODIC_DB_REC, align 4
  %15 = load i32, i32* @QED_PERIODIC_DB_REC_INTERVAL, align 4
  %16 = call i32 @qed_slowpath_delayed_work(%struct.qed_hwfn* %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %12, %11
  ret void
}

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @qed_slowpath_delayed_work(%struct.qed_hwfn*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
